@@ -1,3 +1,9 @@
+2006-05-17  Don Allingham  <don@gramps-project.org>
+	* src/Editors/_EditPlace.py: new SelectPlace interface
+	* src/Editors/_EditEventRef.py: new SelectPlace interface
+	* src/Editors/_EditEvent.py: new SelectPlace interface
+	* src/GrampsWidgets.py: new Place editor interface
+
 2006-05-17  Alex Roitman  <shura@gramps-project.org>
 	* src/GrampsWidgets.py (LinkLabel.__init__): Set cursor to HAND1.
 
